updating home structure

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Dr Leonardo Scabini
-description: Professional and personal info
+title: Dr. Leonardo Scabini
+description: Postdoctoral researcher at the University of São Paulo (USP). 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
